gallery visible fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -1033,17 +1033,17 @@ h2 {
     
     .flat__bg2 {
     
-        max-height: 563px;
+        max-height: 408px;
     }
     
     .flat__bg3 {
     
-        max-height: 563px;
+        max-height: 408px;
     }
     
     .flat__bg4 {
     
-        max-height: 563px;
+        max-height: 408px;
     }
     
     .flat {
